specs/blueprints/errors/parsing/section_hierarchy_layer_skip.eno
# Starting a section two levels deeper than the current one

-- input
# section
### subsubsection
-- input

## ParseError

-- text
Line 2 starts a section that is more than one level deeper than the current one.
-- text

-- snippet
   Line | Content
 *    1 | # section
 >    2 | ### subsubsection
-- snippet

selection: [1,0] => [1,17]
